tests/requests/invalid/chunked_11.py
from gunicorn.http.errors import InvalidChunkSize

request = InvalidChunkSize
